# roblox-outfit-studio

./: LICENSE  OutfitStudio.spec  README.md  build_dist.py  install.bat  pyproject.toml  requirements.txt  run.bat
src/: main.py
src/core/: advanced_template.py  history.py  models.py  paint_engine.py  project_io.py  resources.py
src/editor/: canvas_widget.py
src/ui/: layer_panel.py  main_window.py  theme_manager.py  tool_options.py  viewer_controls.py
src/utils/: generate_samples.py
src/viewer/: gl_widget.py
tests/: test_core.py  test_project_io.py
